Documentation, Cleanup.